colcon_ws/log/build_2022-09-10_23-20-00/gatekeeper/stderr.log
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp: In member function ‘void gatekeeper::Gatekeeper::cloud_callback(sensor_msgs::msg::PointCloud2_<std::allocator<void> >::SharedPtr)’:
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:100:33: error: type/value mismatch at argument 1 in template parameter list for ‘template<class PointT> class pcl::VoxelGrid’
  100 |   pcl::VoxelGrid<pcl::PointCloud> vox;
      |                                 ^
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:100:33: note:   expected a type, got ‘PointCloud’
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:101:7: error: request for member ‘setInputCloud’ in ‘vox’, which is of non-class type ‘int’
  101 |   vox.setInputCloud(filtered.makeShared());
      |       ^~~~~~~~~~~~~
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:102:7: error: request for member ‘setLeafSize’ in ‘vox’, which is of non-class type ‘int’
  102 |   vox.setLeafSize(0.05, 0.05, 0.05);
      |       ^~~~~~~~~~~
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:103:7: error: request for member ‘filter’ in ‘vox’, which is of non-class type ‘int’
  103 |   vox.filter(filtered);
      |       ^~~~~~
make[2]: *** [CMakeFiles/gatekeeper.dir/build.make:63: CMakeFiles/gatekeeper.dir/src/gatekeeper.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:80: CMakeFiles/gatekeeper.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
